add swagger doc for oauth authorize api and fix bug login UI
